ndb - bug#58040 - make sure affected rows get correctly computed even when splitting statement into several batches